# overture

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  portfolio_repos.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: agent_tools.py  config.py  graph.py  i18n.py  main.py  observability.py  portfolio.py  repo.py  schemas.py  security.py  semantic_search.py  summarization.py  tools.py
docs/: README.md  api.md  architecture.md  getting-started.md  operations.md  security.md  testing-and-eval.md
eval/: cases.py  run.py
eval/fixture_repo/: README.md
eval/fixture_repo/src/: billing.py  orders.py
tests/: conftest.py  test_agent_tools.py  test_ask_repo_id.py  test_graph.py  test_health.py  test_language.py  test_memory.py  test_observability.py  test_portfolio.py  test_repo.py  test_repo_registry.py  test_repos_endpoint.py  test_security.py  test_semantic_search.py  test_summarization.py  test_tools.py
