[project]
name = "overture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
